--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,30 +1,3 @@
-
-footer.body {
-    font-family: arial, sans-serif;
-    font-size: 1.3rem;
-    font-weight: 400;
-
-}
-
-#top{
-    background-color:  #666666;
-    height: 5rem;
-}
-
-#bottom{
-    background-color:  #666666;
-    height: 2.5rem;
-}
-
-
-#contain {
-    height: 16rem;
-    background-color: white;
-    border-bottom-style: groove;
-    border-bottom-width: thin;
-    border-bottom-color: grey;
-}
-
 #logoExia img , #logoEi img, #logoCesi img {
     margin-top: 15px;
     margin-left: 25%;
@@ -32,19 +5,14 @@ footer.body {
 
 #logoExia img{
     height: 12rem;
-
-
 }
 
 #logoEi img {
     height: 13rem;
-
-
 }
 
 #logoCesi img{
     height: 10rem;
-
 }
 
 #cart {
@@ -55,18 +23,12 @@ footer.body {
     margin-top: 2.5rem;
 }
 
-
-#bouton{
-    margin-top: 1rem;
-}
-
-
 #foot{
     margin-top: 15rem;
     color: white;
     background-color: #cc0000;
     height: 15rem;
-
+    font-family: arial,ssans, sans-serif;
 }
 
 #facebook img{
