--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -24,3 +24,18 @@ th {
 body {
     background: lightgray;
 }
+
+#buttonAdd{
+    background:  #cc0000;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 8px;
+    padding: 5px 15px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border: 1px solid rgba(0,0,0,0.3);
+    border-bottom-width: 3px;
+    color: whitesmoke;
+}
